添加项目截图

--- a/_sever/_sever.csproj
+++ b/_sever/_sever.csproj
@@ -44,4 +44,8 @@
     <None Include="D:\VisualStudioProject\_sever\_sever\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Screenshot\" />
+  </ItemGroup>
+
 </Project>
